# goit-pycore-hw-05

./: pyproject.toml  task2.txt
task1/: __init__.py  __main__.py
task2/: __init__.py  __main__.py
task3/: __init__.py  __main__.py
tests/: test_task2.py
